# xhook-rs

./: Cargo.toml  README.md  run-example.sh
.cargo/: config
examples/: main.rs
src/: lib.rs
xhook-sys/: Cargo.toml  build.rs  wrapper.h
xhook-sys/xHook_git/src/: build_rust.sh
xhook-sys/xHook_git/src/docs/overview/code/libtest/jni/: test.c
xhook-sys/xHook_git/src/docs/overview/code/main/jni/: main.c
xhook-sys/xHook_git/src/libbiz/jni/: Application.mk
xhook-sys/xHook_git/src/libxhook/jni/: Android.mk  Application.mk
