[package]
name = "xhook-rs"
version = "0.2.0"
edition = "2018"
license = "MIT"
authors = ["wuhx <i@xun.im>"]
description = "A Rust binding for xHook"

repository = "https://github.com/wuhx/xhook-rs"
keywords = ["hook", "xHook"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xhook-sys = { path = "xhook-sys", version = "0.2.0" }
libc = "0.2"

[workspace]
members = [
    "xhook-sys",
]
