[package]
name = "xhook-sys"
version = "0.2.0"
edition = "2018"
license = "MIT"
authors = ["wuhx <i@xun.im>"]
description = "A Rust binding for xHook"

repository = "https://github.com/wuhx/xhook-rs"
keywords = ["hook", "xHook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.54"

[dependencies]
libc = "0.2"
